# DS-01-Agentic-Customer-Churn-Intelligence-Platform

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: cd.yml  ci.yml
api/: lambda_handler.py  schemas.py  server.py
deployment/: Dockerfile  docker-compose.yml  ecr_push.sh
deployment/terraform/: main.tf  outputs.tf  variables.tf
docs/: api_spec.md  architecture.md  runbook.md
infrastructure/modules/: gcp_cloudrun.tf  gcp_variables.tf
kaggle/: ds01_churn_notebook.ipynb  kaggle.md  kernel-metadata.json
mlops/: drift_monitor.py  dvc_pipeline.py  mlflow_config.py
monitoring/: alert_rules.yml  grafana_dashboard.json
pipelines/: daily_scoring_dag.py  drift_check_dag.py  weekly_retrain_dag.py
src/: agent.py  api.py  drift.py  features.py  ingestion.py  predict.py  train.py
src/agent/: __init__.py  crm_client.py  retention_agent.py  slack_notifier.py
src/explainability/: __init__.py  nl_reason_generator.py  shap_explainer.py
src/features/: __init__.py  engineering.py  feature_store.py
src/ingestion/: __init__.py  ge_suite.py  pipeline.py
src/models/: __init__.py  ensemble.py  lstm_trainer.py  predictor.py  trainer.py  xgb_trainer.py
tests/: conftest.py
tests/integration/: test_api.py  test_pipeline.py
tests/unit/: test_explainability.py  test_features.py  test_predictor.py
