[tool.poetry]
name = "ds01-churn-backend"
version = "2.0.0"
description = "Agentic Customer Churn Intelligence Platform — DS-01 College Project"
authors = ["DS-01 Team <thiru@socialeagle.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python          = "^3.12"
pandas          = "2.2.2"
numpy           = "1.26.4"
scikit-learn    = "1.5.1"
xgboost         = "2.1.1"
torch           = "2.3.1"
shap            = "0.45.1"
mlflow          = "2.14.3"
setuptools      = "69.5.1"
great-expectations = "0.18.19"
evidently       = "0.4.30"
langchain       = "1.3.4"
langchain-core  = "1.4.0"
langgraph       = "1.2.4"
langchain-groq  = "1.1.2"
groq            = "0.37.1"
fastapi         = "0.111.1"
uvicorn         = "0.30.1"
pydantic        = "2.8.2"
python-dotenv   = "1.0.1"
joblib          = "1.4.2"
pyarrow         = "*"

[tool.poetry.group.dev.dependencies]
pytest          = "^8.0"
pytest-cov      = "^5.0"
ruff            = "^0.5"
httpx           = "*"

[tool.poetry.group.lambda.dependencies]
mangum          = "*"

[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
exclude     = ["venv", ".venv", "__pycache__", "mlruns"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths    = ["tests"]
python_files = ["test_*.py"]
addopts      = "-v --tb=short"
